--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,5 @@
 indexed model
 - can we use some sort of bulk collections operation rather than iteratively testing each vertex? would we want to?
+
+pipeline
+- nasty base-classes, initialisation, result() method, etc. Can we make these just builders somehow?
