Bounding volumes refactor - part 1
Removed superfluous intersects() methods
Added default to interface
Added equals/toString as appropriate
Factored out inverse and compound volumes
Undone records where inappropriate
Intersection now tests by instanceof and delegates to helpers
BoundingBox is now an adapter for Extents
Moved logic to Extents as appropriate and added intersect()
General pattern tests vs sphere and then extents
Moved all volumes to scene package
TODO - ray intersections

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,17 @@ indexed model
 
 pipeline
 - nasty base-classes, initialisation, result() method, etc. Can we make these just builders somehow?
+
+volumes
+- introduce abstract impl
+- no point in records for impls -> class
+- SphereVolume composes a Sphere + centre
+- Extents = volume?
+- or BoundingVolume.of(Extents)
+- no need for 3 intersects() methods, just make it use instanceof
+- compound should defensive copy
+- integrate Sphere helper and UnitCircle and Matrix.rotation()?
+- Extents also should not be a record
+- BoundingBox === Extents? no need for final
+- Frustum should have a builder!
+- Frustum remove reflection tostring
