AABB-Ray intersection, refactored tuples
Reverted to Tuple base-class (again!) and sealed
Replaced vector/point converters with copy constructor
Renamed scale() to multiply()
Moved dot() to Tuple
Introduced get() for component-wise operations
Implemented AABB-ray intersection
Renamed reverse operator to negate() and added one-over invert()

--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,9 @@ volumes
 - integrate Sphere helper and UnitCircle and Matrix.rotation()?
 - Frustum should have a builder!
 - Frustum remove reflection tostring
+
+demo
+- skybox, cube map
+
+other
+- layouts of components as annotations? does this buy us anything?
