Render pass redesign
Factored out Attachment domain object
Sub-pass and dependencies refer to object rather than indices
Render pass holds list of attachments

--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ pipeline
 - factor out attachment class? no index, create from render pass and link to sub-pass
 - add sub-pass domain object? ditto dependencies?
 - check for depth attachment in frame-buffer::create
-- frame buffer created from swapchain?
+- frame buffer created from swapchain? should be factory since all FBs are the same structure?
 - caching, https://github.com/KhronosGroup/Vulkan-Samples/blob/master/samples/performance/pipeline_cache/pipeline_cache_tutorial.md
 
 model
