--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,6 @@
 pipeline
 - re-build pipeline after window viewport/focus change
-- factor out attachment class? no index, create from render pass and link to sub-pass
-- add sub-pass domain object? ditto dependencies?
 - check for depth attachment in frame-buffer::create
-- frame buffer created from swapchain? should be factory since all FBs are the same structure?
 - caching, https://github.com/KhronosGroup/Vulkan-Samples/blob/master/samples/performance/pipeline_cache/pipeline_cache_tutorial.md
 
 model
@@ -44,3 +41,15 @@ scene
 project
 - separate demo tree using Spring?
 
+sphere builder
+- https://www.mbsoftworks.sk/tutorials/opengl4/022-cylinder-and-sphere/
+- http://in4k.untergrund.net/html_articles/hugi_27_-_coding_corner_polaris_sphere_tessellation_101.htm
+- https://lindenreid.wordpress.com/2017/12/03/simple-mesh-tessellation-triangulation-tutorial/
+- mesh builder?
+- strip builder?
+- add degenerate triangle
+
+other features
+- texture fonts?
+- terrain grid from height-map
+- OpenAL audio
