--- a/todo.txt
+++ b/todo.txt
@@ -47,10 +47,9 @@ other features
 - terrain grid from height-map
 - OpenAL audio
 
-Thoughts
+current
 - surface class really needs to be dependant on logical dev? or physical? just instance?
 - why does surface extend (???)
-- do we really need device context?
 - instead of handle can type mapper be for i/f so can then pass domain objects rather than handle?
 - image class wrapper for buffered image, no need for ctor since just replicates
 - some sort of triangle builder? used in demo and to create x2 triangles for a quad
