--- a/todo.txt
+++ b/todo.txt
@@ -4,14 +4,12 @@ pipeline
 - caching, https://github.com/KhronosGroup/Vulkan-Samples/blob/master/samples/performance/pipeline_cache/pipeline_cache_tutorial.md
 
 model
-- integrate Sphere helper and UnitCircle and Matrix.rotation()?
 - sphere/conic builder, uses unit circle, add pole, add ring with N points / segment
 - extrusion, creates 'cylinder' from 2D shape + normal + dist (segment) from previous, iterative
 
 demo
 - skybox, cube map, skydome?
 - instancing, cubes then tree model, multiple models per OBJ? names? => materials?
-- render loop throttle? FPS, elapsed, etc
 - lighting, materials
 - solar system, scene graph
 - terrain rendering, tiled, LOD, tesselation shader, loader from gray-scale, oct-tree?
@@ -22,7 +20,6 @@ core
 - DeviceFeatures - tests/annotations for required features? techniques -> materials ~ available features
 
 scene
-- Sphere helper class, plus Sphere & centre point? integrate with SphereVolume
 - is Ray.Intersection what we actually need? would need ray + volume in intersection record to be useful in stream processing?
 - composite object for near/far plane distances, FOV, projection matrix, i.e. stuff used in scene? or Scene object?
 - scene = n/f, FOV, root node, projection, viewport, camera
@@ -49,7 +46,7 @@ other features
 current
 - some sort of triangle builder? used in demo and to create x2 triangles for a quad
 - acquire should create a frame object of some sort (swap chain is immutable), i.e. don't care about index
-- move supporting extensions/layers stuff somewhere else [DONE-ish]
+- how to ensure vertex layout is same order if compound layout is mutable? i.e. in cube builder (and OBJ?)
 
 * There are several lists of objects (frame buffers, descriptor sets, etc) that are used when recording the rendering sequence (again lots of dependencies).
 * New classes to compose the various objects that collaborate when recording the render sequence.
