--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,7 @@ model
 - non-interleaved (see DefaultModel)
 
 demo
-- skybox, cube map, skydome?
+- skydome
 - instancing, cubes then tree model, multiple models per OBJ? names? => materials?
 - lighting, materials
 - solar system, scene graph
@@ -46,6 +46,5 @@ current
 - some sort of triangle builder? used in demo and to create x2 triangles for a quad
 - need to filter buttons by action/mods
 - add pipeline cache
-- MIP levels
 - short/int index buffer, extends indexed model, extends model
 - check out old blog
