Minor code and blog changes
Minor code doc changes
Refactored rotation stuff (again)
Re-implemented frame buffer creation to builder
Re-vamped various blogs and fixed some errors

--- a/todo.txt
+++ b/todo.txt
@@ -25,7 +25,7 @@ sphere builder
 - extrusion, creates 'cylinder' from 2D shape + normal + dist (segment) from previous, iterative
 
 other possible features
-- texture fonts?
+- texture fonts, atlas based, or TT font -> builder, 3D, etc
 - OpenAL audio
 - shader storage buffer (SSBO)
 
