Animation refactor and blog updates
Re-ordered perspective projection blog to be simpler
Added animation section to render loop blog (first cut)
Re-factored player & animator, introduced separate media player
TODO - integration in render loop blog

--- a/todo.txt
+++ b/todo.txt
@@ -48,6 +48,7 @@ todo
 - degenerate triangles for strip? and/or primitive restart?
 - re-build swapchain and pipeline after window viewport/focus change
 - check for depth attachment in frame-buffer::create
+- combine OBJ vertex component custom list implementation and parser? no need then for bi-consumer indirection? 
 
 features/limits
 pipeline stages:
