--- a/todo.txt
+++ b/todo.txt
@@ -33,23 +33,25 @@ features todo
 - object tracker
 - custom application properties? using Jackson, or SnakeYAML, JSON, etc
 - screenshots, how? render to off-screen attachment?
+- degenerate triangles for strip? and/or primitive restart?
 
 blog
 - pipeline cache
 - check out old blog
 - index of VK/JOVE objects by chapter
 
-todo
+framework
+- API methods return VkResult instead of int? makes tests messier though? can add interceptor to return success by default using mock(obj, prefs) 
+- re-build swapchain and pipeline after window viewport/focus change
+
+improvements
 - pipeline cache could use Java prefs? and/or user home folder?
 - interpolator revamp
 - joystick from desktop service
-- predicate builder for physical device?
-- manually fiddled by-reference for pointer-to-array of structure
-- degenerate triangles for strip? and/or primitive restart?
-- re-build swapchain and pipeline after window viewport/focus change
 - check for depth attachment in frame-buffer::create
 - combine OBJ vertex component custom list implementation and parser? no need then for bi-consumer indirection? 
 - code gen type mapper sucks, should be declarative but not using nasty switches? table driven somehow (we already have the table!), functional?
+- manually fiddled by-reference for pointer-to-array of structure
 
 features/limits
 pipeline stages:
