--- a/todo.txt
+++ b/todo.txt
@@ -50,3 +50,10 @@ improvements
 - joystick from desktop service
 - code gen type mapper sucks, should be declarative but not using nasty switches? table driven somehow (we already have the table!), functional?
 - manually fiddled by-reference for pointer-to-array of structure
+
+particles
+- particle class ~ use case? position, timestamp(?), colour, size?
+- or similar to vertex?
+- start/end size => vertex attribute
+- low/high fade, when particles start to fade, high = lifetime
+ 
